# store_crawling

./: README.md  app.py  crawling_v1.csv  freshway_weekly_menu_ocr.py  freshway_weekly_menu_sample.csv  magok_crawling.py  magok_store.json  pdd-ocr.service  pyproject.toml  startup.sh
korean_PP-OCRv5_mobile_rec/: inference.json
